# docsloader

./: .gitignore  .history  README.md  pyproject.toml  requirements.txt  setup.py
docsloader/: __init__.py  _auto.py  _base.py  _csv.py  _docx.py  _html.py  _img.py  _md.py  _pdf.py  _pptx.py  _txt.py  _xlsx.py  base.py  csv.py  txt.py  utils.py  xlsx.py
docsloader/_img/: __init__.py  _rapidocr.py  _tesseract.py
docsloader/_pdf/: __init__.py  _pdfplumber.py  _pymupdf.py
docsloader/tests/: test_auto.py  test_csv.py  test_docx.py  test_html.py  test_img.py  test_md.py  test_pdf.py  test_pptx.py  test_txt.py  test_xlsx.py
docsloader/utils/: __init__.py  _download_to_tmpfile.py  _format_image.py  _format_table.py  _is_empty_file.py  _mk_tmpdir.py  _office_cvt_openxml.py  _rm_dir.py  _rm_empty_dir.py  _rm_file.py
