[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

# project
[project]
name = "docsloader"
description = "This is a documents loader."
authors = [{ name = "axiner", email = "atpuxiner@163.com" }]
urls = { Homepage = "https://github.com/atpuxiner/docsloader" }
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
license-files = ["LICENSE"]
readme = "README.md"
dynamic = [
    "version",
    "dependencies",
]

[project.optional-dependencies]
txt = []
csv = []
md = []
html = [
    "lxml==6.0.1",
]
xlsx = [
    "openpyxl==3.1.5",
    "xlrd==2.0.2",
]
pptx = [
    "python-pptx==1.0.2",
]
docx = [
    "python-docx==1.2.0",
]
pdf = [
    "pymupdf==1.26.4",
    "numpy==2.3.3",
    "pdfplumber==0.11.7",
]
img = [
    "rapidocr-onnxruntime==1.4.4",
]
auto = [
    "docsloader[txt]",
    "docsloader[csv]",
    "docsloader[md]",
    "docsloader[html]",
    "docsloader[xlsx]",
    "docsloader[pptx]",
    "docsloader[docx]",
    "docsloader[pdf]",
    "docsloader[img]",
]
all = [
    "docsloader[auto]",
]

# tool
[tool.setuptools.dynamic]
version = { attr = "docsloader.__version__" }
dependencies = { file = "requirements.txt" }

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "docsloader.test*",
    "dist*",
]
